// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDebugFiles renders 1`] = `
<ProjectDebugSymbols
  location={
    Object {
      "query": Object {},
    }
  }
  params={
    Object {
      "orgId": "org",
      "projectId": "project",
    }
  }
>
  <SentryDocumentTitle
    objSlug="project"
    title="Debug Files"
  >
    <SideEffect(DocumentTitle)
      title="Debug Files - project - Sentry"
    >
      <DocumentTitle
        title="Debug Files - project - Sentry"
      />
    </SideEffect(DocumentTitle)>
  </SentryDocumentTitle>
  <StyledSettingsPageHeading
    noTitleStyles={false}
    title="Debug Information Files"
  >
    <SettingsPageHeading
      className="css-1fvvoq2-StyledSettingsPageHeading e1uay4fd4"
      noTitleStyles={false}
      title="Debug Information Files"
    >
      <div
        className="css-1fvvoq2-StyledSettingsPageHeading e1uay4fd4"
      >
        <TitleAndActions>
          <div
            className="css-b5tiyd-TitleAndActions e1uay4fd0"
          >
            <Title
              styled={false}
            >
              <div
                className="css-2kvddg-Title e1uay4fd1"
              >
                <HeaderTitle>
                  <h4
                    className="css-u1l4am-HeaderTitle eqkydle2"
                  >
                    Debug Information Files
                  </h4>
                </HeaderTitle>
              </div>
            </Title>
          </div>
        </TitleAndActions>
      </div>
    </SettingsPageHeading>
  </StyledSettingsPageHeading>
  <TextBlock>
    <div
      className="css-1geyb25-TextBlock e1x1lar10"
    >
      
            Debug information files are used to convert addresses and minified
            function names from native crash reports into function names and
            locations.
          
    </div>
  </TextBlock>
  <TextBlock>
    <div
      className="css-1geyb25-TextBlock e1x1lar10"
    >
      This list contains all uploaded debug information files:
    </div>
  </TextBlock>
  <Panel>
    <Component
      className="css-1bjezgp-Panel e119nu470"
    >
      <div
        className="css-1bjezgp-Panel e119nu470"
      >
        <PanelHeader
          hasButtons={true}
        >
          <div
            className="css-ivplt2-PanelHeader-getPadding en8g1d30"
          >
            <Box
              w={0.375}
            >
              <Base
                className="css-cxbzjr"
                w={0.375}
              >
                <div
                  className="css-cxbzjr"
                  is={null}
                >
                  Debug ID
                </div>
              </Base>
            </Box>
            <Box
              flex="1"
            >
              <Base
                className="css-vti0ei"
                flex="1"
              >
                <div
                  className="css-vti0ei"
                  is={null}
                >
                  Name
                </div>
              </Base>
            </Box>
            <Box>
              <Base
                className="css-roynbj"
              >
                <div
                  className="css-roynbj"
                  is={null}
                >
                  <withRouter(AsyncComponentSearchInput)
                    api={
                      Client {
                        "_chain": [Function],
                        "_wrapRequest": [Function],
                        "bulkUpdate": [Function],
                        "handleRequestError": [Function],
                        "hasProjectBeenRenamed": [Function],
                      }
                    }
                    className="search"
                    onError={[Function]}
                    onSuccess={[Function]}
                    placeholder="Search DIFs"
                    updateRoute={true}
                    url="/projects/org/project/"
                  >
                    <AsyncComponentSearchInput
                      api={
                        Client {
                          "_chain": [Function],
                          "_wrapRequest": [Function],
                          "bulkUpdate": [Function],
                          "handleRequestError": [Function],
                          "hasProjectBeenRenamed": [Function],
                        }
                      }
                      className="search"
                      debounceWait={200}
                      location={
                        Object {
                          "query": Object {},
                        }
                      }
                      onError={[Function]}
                      onSuccess={[Function]}
                      placeholder="Search DIFs"
                      router={
                        Object {
                          "createHref": [MockFunction],
                          "go": [MockFunction],
                          "goBack": [MockFunction],
                          "goForward": [MockFunction],
                          "isActive": [MockFunction],
                          "listen": [MockFunction],
                          "location": Object {
                            "query": Object {},
                          },
                          "push": [MockFunction],
                          "replace": [MockFunction],
                          "setRouteLeaveHook": [MockFunction],
                        }
                      }
                      updateRoute={true}
                      url="/projects/org/project/"
                    >
                      <Form
                        onSubmit={[Function]}
                      >
                        <form
                          className="css-vfrmj7-Form e6xwo1"
                          onSubmit={[Function]}
                        >
                          <Input
                            className="search"
                            onChange={[Function]}
                            placeholder="Search DIFs"
                            value=""
                          >
                            <input
                              className="search css-1bw1438-Input-inputStyles e1xej46s0"
                              onChange={[Function]}
                              placeholder="Search DIFs"
                              value=""
                            />
                          </Input>
                        </form>
                      </Form>
                    </AsyncComponentSearchInput>
                  </withRouter(AsyncComponentSearchInput)>
                </div>
              </Base>
            </Box>
          </div>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <div
            className="css-a4ya23-textStyles"
          >
            <EmptyStateWarning
              small={false}
            >
              <EmptyStreamWrapper
                data-test-id="empty-state"
              >
                <div
                  className="css-eeziz4-EmptyStreamWrapper e1107k000"
                  data-test-id="empty-state"
                >
                  <HeroIcon
                    size="54"
                    src="icon-circle-exclamation"
                  >
                    <ForwardRef
                      className="css-192qau-InlineSvg-HeroIcon e1csd7tf0"
                      size="54"
                      src="icon-circle-exclamation"
                    >
                      <svg
                        className="css-192qau-InlineSvg-HeroIcon e1csd7tf0"
                        height="54"
                        viewBox={Object {}}
                        width="54"
                      >
                        <use
                          href="#test"
                          xlinkHref="#test"
                        />
                      </svg>
                    </ForwardRef>
                  </HeroIcon>
                  <p>
                    There are no debug symbols for this project.
                  </p>
                </div>
              </EmptyStreamWrapper>
            </EmptyStateWarning>
          </div>
        </PanelBody>
      </div>
    </Component>
  </Panel>
  <Styled(Pagination)
    onCursor={[Function]}
  >
    <Pagination
      className="css-yneqnx e1vkspke0"
      onCursor={[Function]}
    />
  </Styled(Pagination)>
</ProjectDebugSymbols>
`;

exports[`ProjectDebugFiles renders empty 1`] = `
<Fragment>
  <SentryDocumentTitle
    objSlug="project"
    title="Debug Files"
  />
  <StyledSettingsPageHeading
    noTitleStyles={false}
    title="Debug Information Files"
  />
  <TextBlock>
    
            Debug information files are used to convert addresses and minified
            function names from native crash reports into function names and
            locations.
          
  </TextBlock>
  <TextBlock>
    This list contains all uploaded debug information files:
  </TextBlock>
  <Panel>
    <PanelHeader
      hasButtons={true}
    >
      <Box
        w={0.375}
      >
        Debug ID
      </Box>
      <Box
        flex="1"
      >
        Name
      </Box>
      <Box>
        <withRouter(AsyncComponentSearchInput)
          api={
            Client {
              "_chain": [Function],
              "_wrapRequest": [Function],
              "bulkUpdate": [Function],
              "handleRequestError": [Function],
              "hasProjectBeenRenamed": [Function],
            }
          }
          className="search"
          onError={[Function]}
          onSuccess={[Function]}
          placeholder="Search DIFs"
          updateRoute={true}
          url="/projects/org/project/"
        />
      </Box>
    </PanelHeader>
    <PanelBody
      direction="column"
      disablePadding={true}
      flex={false}
    >
      <EmptyStateWarning
        small={false}
      >
        <p>
          There are no debug symbols for this project.
        </p>
      </EmptyStateWarning>
    </PanelBody>
  </Panel>
  <Styled(Pagination)
    onCursor={[Function]}
  />
</Fragment>
`;
